--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
-    "angular-localstorage": "latest"
+    "angular-localstorage": "latest",
+    "brick": "latest"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
