--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
     "angular-localstorage": "latest",
-    "brick": "latest"
+    "brick": "latest",
+    "underscore": "~1.5.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
