--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "findMyCar",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.0.7",
+    "angular": "v1.2.0-rc.2",
     "json3": "~3.2.4",
     "es5-shim": "~2.0.8",
     "angular-resource": "~1.0.7",
@@ -11,7 +11,8 @@
     "angular-localstorage": "latest",
     "brick": "latest",
     "underscore": "~1.5.1",
-    "openlayers": "~v2.13.1"
+    "openlayers": "~v2.13.1",
+    "angular-route": "v1.2.0-rc.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
