--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "angular-route": "v1.2.0-rc.2"
   },
   "devDependencies": {
-    "angular-mocks": "~1.0.7",
-    "angular-scenario": "~1.0.7"
+    "angular-scenario": "~1.0.7",
+    "angular-mocks": "v1.2.0-rc.2"
   }
 }
