--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ node_js:
   - '0.10'
 before_script:
   - 'npm install -g bower grunt-cli'
-  - 'bower install'
+  - 'bower install --force-latest'
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
