--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "brick": "latest",
     "underscore": "~1.5.1",
     "openlayers": "~v2.13.1",
-    "angular-route": "v1.2.0-rc.2"
+    "angular-route": "v1.2.0-rc.2",
+    "angular-animate": "v1.2.0-rc.2"
   },
   "devDependencies": {
     "angular-scenario": "~1.0.7",
